feat(completions): update all completions

--- a/completions/bun/language/zh-CN.json
+++ b/completions/bun/language/zh-CN.json
@@ -1351,5 +1351,11 @@
                 "默认为 ./bunfig.toml"
             ]
         }
-    ]
+    ],
+    "info": {
+        "completion_info": {
+            "url": "https://bun.sh",
+            "description": "Bun - JavaScript 运行时和工具包"
+        }
+    }
 }
