--- a/completions/cargo/language/en-US.json
+++ b/completions/cargo/language/en-US.json
@@ -3220,5 +3220,11 @@
         "Print help information."
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://rustwiki.org/en/cargo",
+      "description": "cargo - Rust package manager"
+    }
+  }
 }
