--- a/completions/cargo/language/zh-CN.json
+++ b/completions/cargo/language/zh-CN.json
@@ -3220,5 +3220,11 @@
         "打印帮助信息。"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://rustwiki.org/zh-CN/cargo/",
+      "description": "cargo - Rust 包管理器"
+    }
+  }
 }
