--- a/completions/chfs/language/en-US.json
+++ b/completions/chfs/language/en-US.json
@@ -36,5 +36,11 @@
             ],
             "tip": "Show context-sensitive help."
         }
-    ]
+    ],
+    "info": {
+        "completion_info": {
+            "url": "http://iscute.cn/chfs",
+            "description": "CuteHttpFileServer - A free, HTTP protocol file sharing server cross-platform file sharing server"
+        }
+    }
 }
