--- a/completions/choco/language/en-US.json
+++ b/completions/choco/language/en-US.json
@@ -145,5 +145,11 @@
         "Prints out the Chocolatey version."
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://chocolatey.org/",
+      "description": "choco(chocolatey) - Software Manager"
+    }
+  }
 }
