--- a/completions/choco/language/zh-CN.json
+++ b/completions/choco/language/zh-CN.json
@@ -145,5 +145,11 @@
         "打印出 Chocolatey 版本"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://chocolatey.org/",
+      "description": "choco(chocolatey) - 软件管理"
+    }
+  }
 }
