--- a/completions/conda/language/en-US.json
+++ b/completions/conda/language/en-US.json
@@ -134,5 +134,11 @@
             "name": "--no-plugins",
             "tip": "Disable all plugins that are not built into conda."
         }
-    ]
+    ],
+    "info": {
+        "completion_info": {
+            "url": "https://github.com/conda/conda",
+            "description": "conda - binary package and environment manager"
+        }
+    }
 }
