--- a/completions/conda/language/zh-CN.json
+++ b/completions/conda/language/zh-CN.json
@@ -135,5 +135,11 @@
             "name": "--no-plugins",
             "tip": "禁用所有未内置到 conda 中的插件"
         }
-    ]
+    ],
+    "info": {
+        "completion_info": {
+            "url": "https://github.com/conda/conda",
+            "description": "conda - 二进制包和环境管理器"
+        }
+    }
 }
