--- a/completions/deno/language/zh-CN.json
+++ b/completions/deno/language/zh-CN.json
@@ -1972,6 +1972,10 @@
     }
   ],
   "info": {
+    "completion_info": {
+      "url": "https://deno.com/",
+      "description": "Deno - 安全的 JavaScript 和 TypeScript 运行时"
+    },
     "__no_check": "跳过类型检查模块",
     "__import_map": [
       "U: --import-map <path>\n",
