--- a/completions/docker/language/en-US.json
+++ b/completions/docker/language/en-US.json
@@ -883,14 +883,20 @@
   ],
   "common_options": [
     {
-        "name": "-h",
-        "alias": [
-            "--help"
-        ],
-        "tip": [
-            "U: -h|--help\n",
-            "Show help."
-        ]
+      "name": "-h",
+      "alias": [
+        "--help"
+      ],
+      "tip": [
+        "U: -h|--help\n",
+        "Show help."
+      ]
     }
-]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://www.docker.com",
+      "description": "docker - Container Application Development"
+    }
+  }
 }
