--- a/completions/docker/language/zh-CN.json
+++ b/completions/docker/language/zh-CN.json
@@ -892,5 +892,11 @@
         "显示帮助信息"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://www.docker.com",
+      "description": "docker - 容器应用开发"
+    }
+  }
 }
