--- a/completions/npm/language/en-US.json
+++ b/completions/npm/language/en-US.json
@@ -293,5 +293,11 @@
                 "Show help."
             ]
         }
-    ]
+    ],
+    "info": {
+        "completion_info": {
+            "url": "https://www.npmjs.com/",
+            "description": "npm - package manager"
+        }
+    }
 }
