--- a/completions/npm/language/zh-CN.json
+++ b/completions/npm/language/zh-CN.json
@@ -293,5 +293,11 @@
                 "显示帮助信息"
             ]
         }
-    ]
+    ],
+    "info": {
+        "completion_info": {
+            "url": "https://www.npmjs.com/",
+            "description": "npm - 软件包管理器"
+        }
+    }
 }
