--- a/completions/nrm/language/en-US.json
+++ b/completions/nrm/language/en-US.json
@@ -116,5 +116,11 @@
         "Show help."
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://github.com/Pana/nrm",
+      "description": "nrm - npm registry manager"
+    }
+  }
 }
