--- a/completions/nvm/language/en-US.json
+++ b/completions/nvm/language/en-US.json
@@ -144,5 +144,11 @@
         "Show help."
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://github.com/nvm-sh/nvm",
+      "description": "nvm - Node Version Manager"
+    }
+  }
 }
