--- a/completions/nvm/language/zh-CN.json
+++ b/completions/nvm/language/zh-CN.json
@@ -144,5 +144,11 @@
         "显示帮助信息"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://github.com/nvm-sh/nvm",
+      "description": "nvm - node 版本管理器"
+    }
+  }
 }
