--- a/completions/pip/language/en-US.json
+++ b/completions/pip/language/en-US.json
@@ -1039,6 +1039,10 @@
     }
   ],
   "info": {
+    "completion_info": {
+      "url": "https://github.com/pypa/pip",
+      "description": "pip - Python Package Manager"
+    },
     "__requirement": [
       "U: -r|--requirement <file>\n",
       "Use the order in the given requirements file and its comments when generating output.\n",
