--- a/completions/pip/language/zh-CN.json
+++ b/completions/pip/language/zh-CN.json
@@ -1039,6 +1039,10 @@
     }
   ],
   "info": {
+    "completion_info": {
+      "url": "https://github.com/pypa/pip",
+      "description": "pip - Python 包管理器"
+    },
     "__requirement": [
       "U: -r|--requirement <file>\n",
       "使用给定需求文件中的顺序及其注释来生成输出。\n",
