--- a/completions/pnpm/language/en-US.json
+++ b/completions/pnpm/language/en-US.json
@@ -303,5 +303,11 @@
         "Print the current version of pnpm"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://pnpm.io/",
+      "description": "pnpm - Package Manager"
+    }
+  }
 }
