--- a/completions/pnpm/language/zh-CN.json
+++ b/completions/pnpm/language/zh-CN.json
@@ -281,5 +281,11 @@
         "打印 pnpm 的版本号"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://pnpm.io/zh/",
+      "description": "pnpm - 软件包管理器"
+    }
+  }
 }
