--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -277,6 +277,13 @@
                 "设置为 \"\" (默认值)\n",
                 "\"\" 表示使用 Github/Gitee 仓库"
               ]
+            },
+            {
+              "name": "\"https://abgox.github.io/PSCompletions\"",
+              "tip": [
+                "一个可用的地址\n",
+                "(通过 Github Pages 生成)"
+              ]
             }
           ]
         }
@@ -1224,6 +1231,14 @@
     }
   ],
   "info": {
+    "completion_info": {
+      "url": "https://github.com/abgox/PSCompletions",
+      "description": [
+        "PSCompletions 模块的补全提示\n",
+        "它只能更新，不能移除\n",
+        "如果移除它，将会自动重新添加"
+      ]
+    },
     "description": [
       "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell 补全管理\n",
       "当前模块版本: <@Magenta>{{ $PSCompletions.version }}<@Cyan>\n",
@@ -1774,8 +1789,8 @@
           ]
         },
         "example": [
-          "E: psc config url                                                    --- 获取当前使用的 url\n",
-          "   psc config url https://gitee.com/abgox/PSCompletions/raw/main     --- 设置 url 地址"
+          "E: psc config url                                           --- 获取当前使用的 url\n",
+          "   psc config url https://abgox.github.io/PSCompletions     --- 设置 url 地址"
         ]
       }
     },
