--- a/completions/python/language/en-US.json
+++ b/completions/python/language/en-US.json
@@ -160,5 +160,11 @@
         "print this help message and exit"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://www.python.org",
+      "description": "python - command-line"
+    }
+  }
 }
