--- a/completions/python/language/zh-CN.json
+++ b/completions/python/language/zh-CN.json
@@ -10,7 +10,7 @@
     {
       "name": "-B",
       "tip": [
-        "在导入时不要写入 .pyc 文件; \n",
+        "在导入时不要写入 .pyc 文件;\n",
         "PYTHONDONTWRITEBYTECODE=x"
       ]
     },
@@ -21,7 +21,7 @@
     {
       "name": "-d",
       "tip": [
-        "开启解析器调试输出(仅适用于调试构建); \n",
+        "开启解析器调试输出(仅适用于调试构建);\n",
         "PYTHONDEBUG=x"
       ]
     },
@@ -32,8 +32,8 @@
     {
       "name": "-i",
       "tip": [
-        "运行脚本后以交互式方式进行检查; \n",
-        "即使在 stdin 看起来不是终端时, 也强制显示提示; \n",
+        "运行脚本后以交互式方式进行检查;\n",
+        "即使在 stdin 看起来不是终端时, 也强制显示提示;\n",
         "PYTHONINSPECT=x"
       ]
     },
@@ -48,15 +48,15 @@
     {
       "name": "-O",
       "tip": [
-        "移除 assert 和 __debug__ 依赖的语句; \n",
-        "在 .pyc 扩展名前添加 .opt-1; \n",
+        "移除 assert 和 __debug__ 依赖的语句;\n",
+        "在 .pyc 扩展名前添加 .opt-1;\n",
         "PYTHONOPTIMIZE=x"
       ]
     },
     {
       "name": "-OO",
       "tip": [
-        "执行 -O 更改并删除 docstrings; \n",
+        "执行 -O 更改并删除 docstrings;\n",
         "在 .pyc 扩展名前添加 .opt-2"
       ]
     },
@@ -71,7 +71,7 @@
     {
       "name": "-s",
       "tip": [
-        "不要将用户站点目录添加到 sys.path; \n",
+        "不要将用户站点目录添加到 sys.path;\n",
         "PYTHONNOUSERSITE"
       ]
     },
@@ -82,8 +82,8 @@
     {
       "name": "-u",
       "tip": [
-        "强制 stdout 和 stderr 流不使用缓冲区, \n",
-        "此选项对 stdin 无影响; \n",
+        "强制 stdout 和 stderr 流不使用缓冲区,\n",
+        "此选项对 stdin 无影响;\n",
         "PYTHONUNBUFFERED=x"
       ]
     },
@@ -98,8 +98,8 @@
       "name": "-W",
       "tip": [
         "arg\n",
-        "警告控制; \n",
-        "arg 是操作:信息:类别:模块:行号, \n",
+        "警告控制;\n",
+        "arg 是操作:信息:类别:模块:行号,\n",
         "PYTHONWARNINGS=arg"
       ]
     },
@@ -166,5 +166,11 @@
         "显示帮助信息"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://www.python.org",
+      "description": "python - 命令行"
+    }
+  }
 }
