--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -752,6 +752,10 @@
     }
   ],
   "info": {
+    "completion_info": {
+      "url": "https://scoop.sh",
+      "description": "Scoop - Software Manager"
+    },
     "tip": {
       "bucket": {
         "add": "Add bucket --- {{ $bucket }}",
