--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -752,6 +752,10 @@
     }
   ],
   "info": {
+    "completion_info": {
+      "url": "https://scoop.sh",
+      "description": "Scoop - 软件管理"
+    },
     "tip": {
       "bucket": {
         "add": "添加 bucket --- {{ $bucket }}",
