--- a/completions/volta/language/en-US.json
+++ b/completions/volta/language/en-US.json
@@ -171,5 +171,11 @@
       "name": "--quiet",
       "tip": "Prevents unnecessary output"
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://volta.sh",
+      "description": "volta - Accessible JavaScript Tool Manager"
+    }
+  }
 }
