--- a/completions/volta/language/zh-CN.json
+++ b/completions/volta/language/zh-CN.json
@@ -171,5 +171,11 @@
       "name": "--quiet",
       "tip": "避免不必要的输出"
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://volta.sh",
+      "description": "volta - 无障碍 JavaScript 工具管理器"
+    }
+  }
 }
