--- a/completions/wsl/language/en-US.json
+++ b/completions/wsl/language/en-US.json
@@ -429,6 +429,10 @@
     }
   ],
   "info": {
+    "completion_info": {
+      "url": "https://github.com/microsoft/WSL",
+      "description": "WSL - Windows Subsystem for Linux"
+    },
     "tip": {
       "--distribution": "Run distribution -- {{ $Distro }}",
       "--set-default": "Set default distribution --- {{ $Distro }}",
