--- a/completions/wsl/language/zh-CN.json
+++ b/completions/wsl/language/zh-CN.json
@@ -421,6 +421,10 @@
     }
   ],
   "info": {
+    "completion_info": {
+      "url": "https://github.com/microsoft/WSL",
+      "description": "WSL - 适用于 Linux 的 Windows 子系统"
+    },
     "tip": {
       "--distribution": "运行分发 -- {{ $Distro }}",
       "--set-default": "设置默认分发 --- {{ $Distro }}",
