--- a/completions/wt/language/en-US.json
+++ b/completions/wt/language/en-US.json
@@ -165,5 +165,11 @@
         "Print this help message and exit"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://github.com/microsoft/terminal",
+      "description": "Windows terminal command line"
+    }
+  }
 }
