--- a/completions/wt/language/zh-CN.json
+++ b/completions/wt/language/zh-CN.json
@@ -165,5 +165,11 @@
         "显示帮助信息"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://github.com/microsoft/terminal",
+      "description": "Windows terminal 命令行终端"
+    }
+  }
 }
