--- a/completions/yarn/language/en-US.json
+++ b/completions/yarn/language/en-US.json
@@ -446,5 +446,11 @@
         "Specify one-time password for authentication."
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://classic.yarnpkg.com/",
+      "description": "yarn - package manager"
+    }
+  }
 }
