--- a/completions/yarn/language/zh-CN.json
+++ b/completions/yarn/language/zh-CN.json
@@ -446,5 +446,11 @@
         "指定用于认证的一次性密码。"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://classic.yarnpkg.com/",
+      "description": "yarn - 软件包管理器"
+    }
+  }
 }
