--- a/completions/bun/language/en-US.json
+++ b/completions/bun/language/en-US.json
@@ -1351,5 +1351,11 @@
                 "Default ./bunfig.toml."
             ]
         }
-    ]
+    ],
+    "info": {
+        "completion_info": {
+            "url": "https://bun.sh",
+            "description": "Bun - JavaScript all-in-one toolkit"
+        }
+    }
 }
