--- a/completions/chfs/language/zh-CN.json
+++ b/completions/chfs/language/zh-CN.json
@@ -36,5 +36,11 @@
             ],
             "tip": "显示上下文相关帮助"
         }
-    ]
+    ],
+    "info": {
+        "completion_info": {
+            "url": "http://iscute.cn/chfs",
+            "description": "CuteHttpFileServer - 一个免费的、HTTP协议的文件共享服务器"
+        }
+    }
 }
