--- a/completions/deno/language/en-US.json
+++ b/completions/deno/language/en-US.json
@@ -1972,6 +1972,10 @@
     }
   ],
   "info": {
+    "completion_info": {
+      "url": "https://deno.com/",
+      "description": "Deno - A secure runtime for JavaScript and TypeScript."
+    },
     "__no_check": "Skip type-checking modules.",
     "__import_map": [
       "U: --import-map <path>\n",
