--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -1985,6 +1985,12 @@
       ]
     }
   ],
+  "info": {
+    "completion_info": {
+      "url": "https://git-scm.com",
+      "description": "Git - 版本控制系统"
+    }
+  },
   "config": [
     {
       "name": "disable_hooks",
