--- a/completions/nrm/language/zh-CN.json
+++ b/completions/nrm/language/zh-CN.json
@@ -116,5 +116,11 @@
         "显示帮助信息"
       ]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://github.com/Pana/nrm",
+      "description": "nrm - npm 镜像源管理"
+    }
+  }
 }
