--- a/completions/winget/language/en-US.json
+++ b/completions/winget/language/en-US.json
@@ -882,7 +882,7 @@
         },
         {
           "name": "--product-code",
-          "symbol":"WriteSpaceTab",
+          "symbol": "WriteSpaceTab",
           "tip": [
             "U: --product-code <product-code>\n",
             "Filter results by product code"
@@ -1369,6 +1369,10 @@
     }
   ],
   "info": {
+    "completion_info": {
+      "url": "https://github.com/microsoft/winget-cli",
+      "description": "WinGet - Windows package manager"
+    },
     "__query": [
       "U: -q|--query <query>...\n",
       "Query used for searching packages"
