--- a/completions/winget/language/zh-CN.json
+++ b/completions/winget/language/zh-CN.json
@@ -1369,6 +1369,10 @@
     }
   ],
   "info": {
+    "completion_info": {
+      "url": "https://github.com/microsoft/winget-cli",
+      "description": "WinGet - Windows 程序包管理器"
+    },
     "__query": [
       "U: -q|--query <query>...\n",
       "用于搜索包的查询"
