feat(completions): update 7z
- update en-US
- add zh-CN

--- a/completions/7z/language/zh-CN.json
+++ b/completions/7z/language/zh-CN.json
@@ -2,7 +2,7 @@
   "root": [
     {
       "name": "a",
-      "tip": "Add files to archive"
+      "tip": "将文件添加到存档"
     },
     {
       "name": "b",
@@ -10,39 +10,39 @@
     },
     {
       "name": "d",
-      "tip": "Delete files from archive"
+      "tip": "从存档中删除文件"
     },
     {
       "name": "e",
-      "tip": "Extract files from archive (without using directory names)"
+      "tip": "从存档中提取文件(不使用目录名称)"
     },
     {
       "name": "h",
-      "tip": "Calculate hash values for files"
+      "tip": "计算文件的哈希值"
     },
     {
       "name": "i",
-      "tip": "Show information about supported formats"
+      "tip": "显示有关支持格式的信息"
     },
     {
       "name": "l",
-      "tip": "List contents of archive"
+      "tip": "列出存档的内容"
     },
     {
       "name": "rn",
-      "tip": "Rename files in archive"
+      "tip": "重命名存档中的文件"
     },
     {
       "name": "t",
-      "tip": "Test integrity of archive"
+      "tip": "测试存档的完整性"
     },
     {
       "name": "u",
-      "tip": "Update files to archive"
+      "tip": "更新文件以存档"
     },
     {
       "name": "x",
-      "tip": "extract files with full paths"
+      "tip": "具有完整路径的 eXtract 文件"
     }
   ],
   "options": [
@@ -51,7 +51,7 @@
       "alias": [
         "-v"
       ],
-      "tip": "Show the version."
+      "tip": "显示当前版本"
     }
   ],
   "common_options": [
@@ -60,66 +60,66 @@
       "alias": [
         "-h"
       ],
-      "tip": "Show help."
+      "tip": "显示帮助信息"
     },
     {
       "name": "--",
-      "tip": "Stop switches and @listfile parsing"
+      "tip": "停止开关和 @listfile 解析"
     },
     {
       "name": "-ai",
       "symbol": "WriteSpaceTab",
-      "tip": "Include archives"
+      "tip": "包括存档"
     },
     {
       "name": "-ax",
       "symbol": "WriteSpaceTab",
-      "tip": "eXclude archives"
+      "tip": "提取存档"
     },
     {
       "name": "-ao",
       "tip": [
         "U: -ao[a|s|t|u]\n",
-        "set Overwrite mode"
+        "设置覆盖模式"
       ]
     },
     {
       "name": "-an",
-      "tip": "disable archive_name field"
+      "tip": "禁用 archive_name 字段"
     },
     {
       "name": "-bb",
       "tip": [
         "U: -bb[0|1|2|3]\n",
-        "set output log level"
+        "设置输出日志级别"
       ]
     },
     {
       "name": "-bd",
-      "tip": "disable progress indicator"
+      "tip": "禁用进度指示器"
     },
     {
       "name": "-bs",
       "tip": [
         "U: -bs[o|e|p]\n",
-        "set output stream for output/error/progress line"
+        "设置 output/error/progress 输出流"
       ]
     },
     {
       "name": "-bt",
-      "tip": "show execution time statistics"
+      "tip": "显示执行时间统计信息"
     },
     {
       "name": "-i",
       "symbol": "WriteSpaceTab",
-      "tip": "Include filenames"
+      "tip": "包含文件名"
     },
     {
       "name": "-m",
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -m <Parameters>\n",
-        "set compression Method"
+        "设置压缩方法"
       ]
     },
     {
@@ -127,7 +127,7 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -mmt <N>\n",
-        "set number of CPU threads"
+        "设置CPU线程数"
       ]
     },
     {
@@ -135,7 +135,7 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -mx <N>\n",
-        "set compression level"
+        "设置压缩级别"
       ]
     },
     {
@@ -143,7 +143,7 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -o <Directory>\n",
-        "set Output directory"
+        "设置输出目录"
       ]
     },
     {
@@ -151,7 +151,7 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -p <Password>\n",
-        "set Password"
+        "设置密码"
       ]
     },
     {
@@ -159,53 +159,53 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -r <-|0>\n",
-        "Recurse subdirectories"
+        "递归子目录"
       ]
     },
     {
       "name": "-sa",
       "tip": [
         "U: -sa[a|e|s]\n",
-        "set Archive name mode"
+        "设置归档名称模式"
       ]
     },
     {
       "name": "-scc",
       "tip": [
         "U: -scc[UTF-8|WIN|DOS]\n",
-        "set charset for for console input/output"
+        "设置控制台输入/输出字符集"
       ]
     },
     {
       "name": "-scs",
       "tip": [
         "U: -scs[UTF-8|UTF-16LE|UTF-16BE|WIN|DOS] <value>\n",
-        "set charset for list files"
+        "设置列表文件字符集"
       ]
     },
     {
       "name": "-scrc",
       "tip": [
         "U: -scrc[CRC32|CRC64|SHA1|SHA256] <value>\n",
-        "set hash function for x, e, h commands"
+        "为x、e、h命令设置哈希函数"
       ]
     },
     {
       "name": "-sdel",
-      "tip": "delete files after compression"
+      "tip": "压缩后删除文件"
     },
     {
       "name": "-seml",
       "tip": [
         "U: -seml <.>\n",
-        "send archive by email"
+        "通过电子邮件发送归档"
       ]
     },
     {
       "name": "-sfx",
       "tip": [
         "U: -sfx <name>\n",
-        "Create SFX archive"
+        "创建SFX归档"
       ]
     },
     {
@@ -213,67 +213,67 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -si <name>\n",
-        "read data from stdin"
+        "从标准输入读取数据"
       ]
     },
     {
       "name": "-slp",
-      "tip": "set Large Pages mode"
+      "tip": "设置大页面模式"
     },
     {
       "name": "-slt",
-      "tip": "show technical information for l (List) command"
+      "tip": "显示l（列表）命令的技术信息"
     },
     {
       "name": "-snh",
-      "tip": "store hard links as links"
+      "tip": "将硬链接存储为链接"
     },
     {
       "name": "-snl",
-      "tip": "store symbolic links as links"
+      "tip": "将符号链接存储为链接"
     },
     {
       "name": "-sni",
-      "tip": "store NT security information"
+      "tip": "存储NT安全信息"
     },
     {
       "name": "-sns",
-      "tip": "store NTFS alternate streams"
+      "tip": "存储NTFS备用流"
     },
     {
       "name": "-so",
-      "tip": "write data to stdout"
+      "tip": "将数据写入标准输出"
     },
     {
       "name": "-spd",
-      "tip": "disable wildcard matching for file names"
+      "tip": "禁用文件名的通配符匹配"
     },
     {
       "name": "-spe",
-      "tip": "eliminate duplication of root folder for extract command"
+      "tip": "消除提取命令的根文件夹重复"
     },
     {
       "name": "-spf",
-      "tip": "use fully qualified file paths"
+      "tip": "使用完全限定的文件路径"
     },
     {
       "name": "-ssc",
-      "tip": "set sensitive case mode"
+      "tip": "设置区分大小写模式"
     },
     {
       "name": "-ssw",
-      "tip": "compress shared files"
+      "tip": "压缩共享文件"
     },
     {
       "name": "-stl",
-      "tip": "set archive timestamp from the most recently modified file"
+      "tip": "从最近修改的文件设置归档时间戳"
     },
     {
       "name": "-stm",
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -stm <HexMask>\n",
-        "set CPU thread affinity mask (hexadecimal number)"
+        "设置CPU线程关联掩码（十六进制数）"
       ]
     },
     {
@@ -281,14 +281,14 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -stx <Type>\n",
-        "exclude archive type"
+        "排除归档类型"
       ]
     },
     {
       "name": "-t",
       "tip": [
         "U: -t[7z|bzip2|gzip|swfc|tar|wim|xz|zip...] <Type>\n",
-        "Set type of archive"
+        "设置归档类型"
       ]
     },
     {
@@ -296,7 +296,7 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -u <[-][p#][q#][r#][x#][y#][z#][!newArchiveName]>\n",
-        "Update options"
+        "更新选项"
       ]
     },
     {
@@ -304,7 +304,7 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -v <Size>[b|k|m|g]\n",
-        "Create volumes"
+        "创建卷"
       ]
     },
     {
@@ -312,7 +312,7 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -w <path>\n",
-        "assign Work directory"
+        "分配工作目录"
       ]
     },
     {
@@ -320,18 +320,18 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -x <[r[-|0]]{@listfile|!wildcard}>\n",
-        "eXclude filenames"
+        "排除文件名"
       ]
     },
     {
       "name": "-y",
-      "tip": "assume Yes on all queries"
+      "tip": "假定所有查询都为是"
     }
   ],
   "info": {
     "completion_info": {
       "url": "https://7-zip.org/",
-      "description": "The command line cli of 7-Zip"
+      "description": "7-Zip 的命令行 cli 程序"
     }
   }
 }
