feat(completions): update 7z(zh-CN)

--- a/completions/7z/language/zh-CN.json
+++ b/completions/7z/language/zh-CN.json
@@ -2,7 +2,7 @@
   "root": [
     {
       "name": "a",
-      "tip": "将文件添加到存档"
+      "tip": "将文件添加到归档"
     },
     {
       "name": "b",
@@ -10,11 +10,11 @@
     },
     {
       "name": "d",
-      "tip": "从存档中删除文件"
+      "tip": "从归档中删除文件"
     },
     {
       "name": "e",
-      "tip": "从存档中提取文件(不使用目录名称)"
+      "tip": "从归档中提取文件(不使用目录名称)"
     },
     {
       "name": "h",
@@ -26,19 +26,19 @@
     },
     {
       "name": "l",
-      "tip": "列出存档的内容"
+      "tip": "列出归档的内容"
     },
     {
       "name": "rn",
-      "tip": "重命名存档中的文件"
+      "tip": "重命名归档中的文件"
     },
     {
       "name": "t",
-      "tip": "测试存档的完整性"
+      "tip": "测试归档的完整性"
     },
     {
       "name": "u",
-      "tip": "更新文件以存档"
+      "tip": "更新文件以归档"
     },
     {
       "name": "x",
@@ -69,12 +69,12 @@
     {
       "name": "-ai",
       "symbol": "WriteSpaceTab",
-      "tip": "包括存档"
+      "tip": "包括归档"
     },
     {
       "name": "-ax",
       "symbol": "WriteSpaceTab",
-      "tip": "提取存档"
+      "tip": "提取归档"
     },
     {
       "name": "-ao",
@@ -127,7 +127,7 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -mmt <N>\n",
-        "设置CPU线程数"
+        "设置 CPU 线程数"
       ]
     },
     {
@@ -205,7 +205,7 @@
       "name": "-sfx",
       "tip": [
         "U: -sfx <name>\n",
-        "创建SFX归档"
+        "创建 SFX 归档"
       ]
     },
     {
@@ -222,7 +222,7 @@
     },
     {
       "name": "-slt",
-      "tip": "显示l（列表）命令的技术信息"
+      "tip": "显示l(列表)命令的技术信息"
     },
     {
       "name": "-snh",
@@ -273,7 +273,7 @@
       "symbol": "WriteSpaceTab",
       "tip": [
         "U: -stm <HexMask>\n",
-        "设置CPU线程关联掩码（十六进制数）"
+        "设置 CPU 线程关联掩码(十六进制数)"
       ]
     },
     {
@@ -325,7 +325,7 @@
     },
     {
       "name": "-y",
-      "tip": "假定所有查询都为是"
+      "tip": "假定所有查询都为 Yes"
     }
   ],
   "info": {
