feat(completions): update git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -524,6 +524,13 @@
       "tip": "Merge two or more development histories.",
       "options": [
         {
+          "name": "--squash",
+          "tip": [
+            "Compresses the merge result into a single commit and does not preserve the commit history of the source branch.\n",
+            "Then you need to specify a new commit message."
+          ]
+        },
+        {
           "name": "--continue",
           "tip": "Continue the current merge operation."
         },
