--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -524,6 +524,13 @@
       "tip": "合并两个或更多开发历史。",
       "options": [
         {
+          "name": "--squash",
+          "tip": [
+            "将合并结果压缩为一个提交，并且不会保留源分支的提交历史。\n",
+            "然后你需要指定一个新的提交信息"
+          ]
+        },
+        {
           "name": "--continue",
           "tip": "继续当前的合并操作。"
         },
