feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1538,9 +1538,13 @@
         "{{",
         " if($json.config){",
         "'<@Blue>---------- Special configuration ---------- ';",
-        "$config_list=$json.config | ForEach-Object { \"`n<@Magenta>$($_.name)<@Blue>: `nDefault Value: $($_.value)`n$($PSCompletions.replace_content($_.tip))\" };",
-        "$config_list -join \"`n\";",
-        "\"`n<@Blue>-------------------------------------------\";",
+        " $config_list=$json.config | ForEach-Object {",
+        "  $config_value = $PSCompletions.config.comp_config.$completion.$($_.name);",
+        "  $value = if($config_value -ne $null){ \"`nCurrent Value: $($config_value)\" };",
+        "  \"`n<@Magenta>$($_.name)<@Blue>:$($value)`nDefault Value: $($_.value)`n$($PSCompletions.replace_content($_.tip))\" ",
+        " };",
+        " $config_list -join \"`n\";",
+        " \"`n<@Blue>-------------------------------------------\";",
         "};",
         "}}"
       ],
