--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1540,7 +1540,11 @@
         "{{",
         "if($json.config){",
         " '<@Blue>---------- 补全特殊配置 ---------- ';",
-        " $config_list=$json.config | ForEach-Object { \"`n<@Magenta>$($_.name)<@Blue>:`n默认值: $($_.value)`n$($PSCompletions.replace_content($_.tip))\" };",
+        " $config_list=$json.config | ForEach-Object {",
+        "   $config_value = $PSCompletions.config.comp_config.$completion.$($_.name);",
+        "   $value = if($config_value -ne $null){ \"`n当前值: $($config_value)\" };",
+        "   \"`n<@Magenta>$($_.name)<@Blue>: $($value)`n默认值: $($_.value)`n$($PSCompletions.replace_content($_.tip))\"",
+        " };",
         " $config_list -join \"`n\";",
         " \"`n<@Blue>----------------------------------\";",
         "};",
