feat(completions): update pnpm(zh-CN)

--- a/completions/pnpm/language/zh-CN.json
+++ b/completions/pnpm/language/zh-CN.json
@@ -102,6 +102,28 @@
       ]
     },
     {
+      "name": "list",
+      "alias": [
+        "ls"
+      ],
+      "tip": [
+        "U: list|ls\n",
+        "以树形结构打印所有已安装软件包的版本及其依赖包"
+      ],
+      "options": [
+        {
+          "name": "--global",
+          "alias": [
+            "-g"
+          ],
+          "tip": [
+            "U: -g|--global\n",
+            "全局列出"
+          ]
+        }
+      ]
+    },
+    {
       "name": "update",
       "alias": [
         "up",
