feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -350,7 +350,7 @@
                 "Current Value: {{ $PSCompletions.config.symbol_WriteSpaceTab }}\n",
                 "Setting it will affect all completion item with this type of symbol.\n",
                 "When it appears in the completion item, it means that after you apply it,\n",
-                "you can enter a string, then press Space and Tab key to continue to get command completions.\n",
+                "you can press Space and enter a string, then press Space and Tab key to continue to get command completions.\n",
                 "If the string has Spaces, Please use \"\" or '' to wrap it. e.g. 'test content'"
               ],
               "next": [
@@ -1254,7 +1254,7 @@
       "        - It can be customized by running <@Magenta>psc menu symbol SpaceTab <symbol><@Cyan>\n",
       "   - 🤔 : It means that after you apply it (option completion), you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get option completions. (e.g. --verbose)\n",
       "        - It can be customized by running <@Magenta>psc menu symbol OptionTab <symbol><@Cyan>\n",
-      "   - 😎 : It means that after you apply it (option completion), you can enter a string, then press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get the rest of option completions.\n",
+      "   - 😎 : It means that after you apply it (option completion), you can press <@Magenta>Space<@Cyan> and enter a string, then press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get the rest of option completions.\n",
       "        - If the string has Spaces, Please use \"\" or '' to wrap it. e.g. 'test content'\n",
       "        - If there is also 😄, it means that there are some strings to complete, you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get command completions without entering a string.\n",
       "        - It can be customized by running <@Magenta>psc menu symbol WriteSpaceTab <symbol><@Cyan>\n",
@@ -1338,7 +1338,7 @@
       "        - It can be customized by running <@Magenta>psc menu symbol SpaceTab <symbol><@Cyan>\n",
       "   - 🤔 : It means that after you apply it (option completion), you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get option completions. (e.g. --verbose)\n",
       "        - It can be customized by running <@Magenta>psc menu symbol OptionTab <symbol><@Cyan>\n",
-      "   - 😎 : It means that after you apply it (option completion), you can enter a string, then press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get the rest of option completions.\n",
+      "   - 😎 : It means that after you apply it (option completion), you can press <@Magenta>Space<@Cyan> and enter a string, then press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get the rest of option completions.\n",
       "        - If the string has Spaces, Please use \"\" or '' to wrap it. e.g. 'test content'\n",
       "        - If there is also 😄, it means that there are some strings to complete, you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get command completions without entering a string.\n",
       "        - It can be customized by running <@Magenta>psc menu symbol WriteSpaceTab <symbol><@Cyan>\n",
