--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -345,7 +345,7 @@
               "tip": [
                 "当前值: {{ $PSCompletions.config.symbol_WriteSpaceTab }}\n",
                 "设置它, 会影响所有的补全提示中的此类型表情符号\n",
-                "当它在补全提示中出现, 表示选用此补全后, 你可以输入一个内容, 然后按下 Space(空格键) 和 Tab 键继续获取补全候选\n",
+                "当它在补全提示中出现, 表示选用此补全后, 你可以按下 Space(空格键)，再输入一个内容, 然后按下 Space(空格键) 和 Tab 键继续获取补全候选\n",
                 "如果输入内容带有空格, 请使用 \"\" 或者 '' 包裹, e.g. 'test content'"
               ],
               "next": [
@@ -1251,7 +1251,7 @@
       "        - 可通过 <@Magenta>psc menu symbol SpaceTab <symbol><@Cyan> 自定义此符号\n",
       "   - 🤔 : 表示选用当前选中的选项类补全后, 你可以按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取剩余选项类补全(如 --verbose)\n",
       "        - 可通过 <@Magenta>psc menu symbol OptionTab <symbol><@Cyan> 自定义此符号\n",
-      "   - 😎 : 表示选用当前选中的选项类补全后, 你可以输入一个字符串, 然后按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取剩余选项类补全\n",
+      "   - 😎 : 表示选用当前选中的选项类补全后, 你可以按下 <@Magenta>空格<@Cyan>, 再输入一个字符串, 然后按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取剩余选项类补全\n",
       "        - 如果字符串有空格, 请使用 \"\" 或 '' 包裹, 如 \"test content\"\n",
       "        - 如果同时还有 😄, 表示有几个预设的字符串可以补全, 你可以不输入字符串, 直接按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取补全\n",
       "        - 可通过 <@Magenta>psc menu symbol WriteSpaceTab <symbol><@Cyan> 自定义此符号\n",
@@ -1340,7 +1340,7 @@
       "        - 可通过 <@Magenta>psc menu symbol SpaceTab <symbol><@Cyan> 自定义此符号\n",
       "   - 🤔 : 表示选用当前选中的选项类补全后, 你可以按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取剩余选项类补全(如 --verbose)\n",
       "        - 可通过 <@Magenta>psc menu symbol OptionTab <symbol><@Cyan> 自定义此符号\n",
-      "   - 😎 : 表示选用当前选中的选项类补全后, 你可以输入一个字符串, 然后按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取剩余选项类补全\n",
+      "   - 😎 : 表示选用当前选中的选项类补全后, 你可以按下 <@Magenta>空格<@Cyan>, 再输入一个字符串, 然后按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取剩余选项类补全\n",
       "        - 如果字符串有空格, 请使用 \"\" 或 '' 包裹, 如 \"test content\"\n",
       "        - 如果同时还有 😄, 表示有几个预设的字符串可以补全, 你可以不输入字符串, 直接按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取补全\n",
       "        - 可通过 <@Magenta>psc menu symbol WriteSpaceTab <symbol><@Cyan> 自定义此符号\n",
